<resources>

    <!-- Naam van de app -->
    <string name="app_name">RSR</string>

    <!-- text strings van de app -->
    <string name="maintitle"> RSR Revalidatieservice</string>
    <string name="pechhulp_btn"> RSR Pechhulp</string>
    <string name="over_rsr">Over RSR</string>
    <string name="info_text">Met de hulpmiddelen van RSR blijft u mobiel. RSR is dé
    leverancier van hulpmiddelen in de regio Noordoost-Nederland. Gedegen kennis
    en jarenlange ervaring zit in ons DNA verweven en leidt to het beste advies.\n\nWilt
        u meer weten over onze producten en diensten, kijk dan op www.rsr.nl of
    bezoek onze showrooms in Silvolde en Nieuwleusen. We zijn iedere werkdag geopend
    van 8.00 to 17.00 uur. Hier kunt u diverse hulpmiddelen uitproberen en rustig
    bekijken wat goed bij uw situatie aansluit. Samen met u zoeken we naar het hulpmiddel
    dat bij u past. RSR maakt mensen mobiel
   </string>
    <string name="bel_rsr">Bel RSR nu</string>
    <string name="title_activity_maps">Map</string>
    <string name="custom_info_window_text">Onthoud deze locatie voor het telefoongesprek</string>
    <string name="uw_locatie_text">Uw Locatie:</string>
    <string name="belkosten">Belkosten</string>
    <string name="info_belkosten">Voor dit nummer betaalt u uw gebruikelijke belkosten.</string>
    <string name="bel_nu">Bel nu</string>
    <string name="annuleren">Annuleren</string>
    <string name="rsr_locatietoegang">RSR pechhulp heeft toegang tot uw locatie nodig. Schakel locatietoegang in.</string>
    <string name="instellingen">Ga naar instellingen</string>
    <string name="locatieservices_uitgeschakeld">Locatieservices uitgeschakeld</string>
    <string name="contact_opnemen">Neem contact op met RSR Nederland</string>
    <string name="rsr_telefoonnummer">0900-7788990</string>
    <string name="geen_ondersteuning">Spraakoproepen worden niet ondersteund</string>
    <string name="ok_dialog_tablet">Ok</string>

    <!-- content descriptions -->
    <string name="backarrow">image backarrow</string>
    <string name="splashlogo">splash logo</string>
    <string name="rsrlogo">rsr logo</string>
    <string name="infoImage">image info</string>
    <string name="infoBtn">info btn</string>
    <string name="mainImage">image main</string>
    <string name="close_btn">close btn</string>
    <string name="warning_image">warning image</string>
</resources>
