<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="270dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorcustompopup"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/belkosten"
            android:textColor="@color/titletoolbar"
            android:textSize="18sp" />

        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/info_belkosten"
            android:textColor="@color/titletoolbar" />

        <Button
            android:id="@+id/call_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_collor"
            android:drawableStart="@drawable/phone_btn"
            android:fontFamily="sans-serif"
            android:onClick="callRsr"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:text="@string/bel_nu"
            android:textColor="@color/titletoolbar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/close_dialog"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:background="@color/toolbarcolor"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/close_btn"
            android:src="@drawable/close_btn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:gravity="right|center_vertical"
            android:text="@string/annuleren"
            android:textColor="@color/titletoolbar"
            android:textSize="12sp" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>