<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainActivity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_layout_height"
        android:background="@color/toolbarcolor"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/titletoolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/maintitle"
            android:textColor="@color/titletoolbar"
            android:textSize="@dimen/toolbar_textsize" />

        <ImageView
            android:id="@+id/info_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:contentDescription="@string/infoBtn"
            android:foregroundGravity="right"
            android:src="@drawable/main_info_btn" />

    </android.support.v7.widget.Toolbar>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/mainImage"
        android:scaleType="center"
        android:src="@drawable/main_bg"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_toolbar_layout_height"
        android:layout_alignParentTop="true"
        android:background="@color/toolbarcolorshadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/pechhulp_btn"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_collor"
        android:drawableStart="@drawable/warning_pechhulp_btn"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingEnd="30dp"
        android:paddingStart="20dp"
        android:text="@string/pechhulp_btn"
        android:textAllCaps="false"
        android:textColor="@color/titletoolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_alignParentTop="true"
        android:background="@color/toolbarcolorshadow"
        app:layout_constraintEnd_toEndOf="@+id/pechhulp_btn"
        app:layout_constraintStart_toStartOf="@+id/pechhulp_btn"
        app:layout_constraintTop_toBottomOf="@+id/pechhulp_btn" />


</android.support.constraint.ConstraintLayout>