<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infoActivity.InfoActivity">

    <LinearLayout
        android:id="@+id/back_arrow"
        android:layout_width="@dimen/toolbar_back_btn_layout_width"
        android:layout_height="0dp"
        android:background="@drawable/button_collor"
        android:orientation="horizontal"
        android:translationZ="@android:dimen/thumbnail_height"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/backarrow"
            android:src="@drawable/menu_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/over_rsr"
            android:textColor="@color/titletoolbar"
            android:textSize="@dimen/toolbar_textsize" />
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_layout_height"
        android:background="@color/toolbarcolor"
        android:elevation="4dp"
        app:contentInsetStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/titletoolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_collor"
            android:orientation="horizontal">
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_toolbar_layout_height"
        android:layout_alignParentTop="true"
        android:background="@color/toolbarcolorshadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/infoImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/infoImage"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_shadow"
        app:srcCompat="@drawable/info_bg" />

    <View
        android:id="@+id/infoImage_shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignParentTop="true"
        android:background="@color/toolbarcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoImage" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:text="@string/info_text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/toolbarcolor"
        android:textSize="@dimen/activity_info_info_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoImage_shadow" />
</android.support.constraint.ConstraintLayout>