<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mapsActivity.MapsActivity">

    <LinearLayout
        android:id="@+id/back_arrow"
        android:layout_width="@dimen/toolbar_back_btn_layout_width"
        android:layout_height="0dp"
        android:background="@drawable/button_collor"
        android:orientation="horizontal"
        android:translationZ="@android:dimen/thumbnail_height"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/backarrow"
            android:src="@drawable/menu_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/pechhulp_btn"
            android:textColor="@color/titletoolbar"
            android:textSize="@dimen/toolbar_textsize" />

    </LinearLayout>

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_layout_height"
        android:background="@color/toolbarcolor"
        android:elevation="4dp"
        app:contentInsetStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/titletoolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_collor"
            android:orientation="horizontal">

        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentTop="true"
        android:background="@color/toolbarcolorshadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/show_popup"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_collor"
        android:drawableStart="@drawable/bel_btn"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:onClick="showPopup"
        android:paddingEnd="30dp"
        android:paddingStart="20dp"
        android:text="@string/bel_rsr"
        android:textAllCaps="false"
        android:textColor="@color/titletoolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/shadow_toolbar_layout_height"
        android:layout_alignParentTop="true"
        android:background="@color/toolbarcolorshadow"
        app:layout_constraintEnd_toEndOf="@+id/show_popup"
        app:layout_constraintStart_toStartOf="@+id/show_popup"
        app:layout_constraintTop_toBottomOf="@+id/show_popup" />

</android.support.constraint.ConstraintLayout>